Fixed Spelling mistake

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="hero" class="slide hero">
           <div class="content">
             <h1>wolfie art studios</h1>
-            <p>Fine artist | Illistrator | Photographer</p>
+            <p>Fine artist | Illustrator | Photographer</p>
             <a href="#gallery">VISIT STUDIO</a>
           </div>
         </section>
@@ -63,7 +63,7 @@
         <section id="about" class="slide about-page">
           <div>
             <div class="about-desc">
-              <h2>Fine artist | Illistrator | Photographer</h2>
+              <h2>Fine artist | Illustrator | Photographer</h2>
               <p>
                 Hello my name is Ankia, I’m an asspiring young artist located in
                 the western cape, south africa. i draw inspiration from my
